syntax = "proto3";

option csharp_namespace = "gRPC";

package server;

service EndPoint
{
  rpc Message(CommandRequest) returns (CommandResponse);
}
message CommandForObject
{
	string Key = 1;
	string Value = 2;
}

message CommandRequest
{
	string GameId = 1;
	string CommandType = 2;
	string GameItemId = 3;
	repeated CommandForObject Args = 4;
}

message CommandResponse 
{
  int32 status = 1;
}
